--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.5.4",
+    "css-loader": "^1.0.0",
     "eslint-config-airbnb": "^17.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.4",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
